<resources>
    <string name="app_name">Petzpros</string>
    <string name="action_settings">Settings</string>
    <string name="some_error">Something went wrong</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_invalid">Email or password cannot be empty</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>
    <string name="title_home">Home</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="care_tacker">PET CARE TAKER</string>
    <string name="user_login">PET OWNER</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="already_have_an_account"><font color='#555555'> New user? </font> <font color='#37BC9B'>Sign Up here</font></string>

    <!-- Registration page -->
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Enter Confirm Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone">Enter Phone</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_city">Enter City</string>
    <string name="hint_state">Enter State</string>
    <string name="hint_country">Enter Country</string>
    <string name="hint_zipcode">Enter Zipcode</string>

    <string name="title_pet_owner_reg">PET OWNER REGISTRATION</string>
    <string name="title_pet_care_reg">PET CARE TAKER REGISTRATION</string>

    <string name="label_dog_walking">Dog Walking</string>
    <string name="label_dog_boarding">Dog Boarding</string>
    <string name="label_dog_sitting">Dog Sitting</string>
    <string name="label_dog_day_care">Dog Day care</string>
    <string name="label_cat_doarding">Cat Boarding</string>
    <string name="label_cat_sitting">Cat Sitting</string>
    <string name="label_drop_visits">Drop in Visits</string>
    <string name="hint_charge_per_hour">Charge Per Hour($)*</string>

    <string name="hint_account_number">Account Number</string>
    <string name="hint_bank_name">Bank Name</string>
    <string name="hint_bank_branch">Branch</string>
    <string name="hint_ifsc_code">IFSC code</string>

    <string name="btn_submit">Submit</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_services">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="menu_privicy">Privacy Policy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_available_caretackers">Available Pet Care Takers</string>
    <string name="label_booking_details">Booking Details</string>

    <string name="label_booking_name">Name : %1$s</string>
    <string name="label_booking_phone">Phone : %1$s</string>
    <string name="label_booking_address">Address : %1$s</string>
    <string name="label_booking_service">Service : %1$s</string>
    <string name="label_booking_appointment">Appointment Date : %1$s</string>
    <string name="label_booking_start">Start Time\n%1$s</string>
    <string name="label_booking_end">End Time\n%1$s</string>
    <string name="label_booking_amount">Total Amount\n$ %1$s</string>

    <string name="label_notification">Notifications</string>
    <string name="label_rejected">Rejected Services</string>
    <string name="label_past">Past Services</string>
    <string name="label_fuatcher">UpComing Services</string>
    <string name="label_profile">My Profile</string>

    <string name="label_more">More</string>
    <string name="label_about">About</string>
    <string name="label_faq">FAQ</string>
    <string name="label_contact">Contact</string>
    <string name="label_terms">Terms &amp; Conditions</string>
    <string name="label_privacy">Privacy Policy</string>


    <string name="title_1">Dog walking</string>
    <string name="title_2">Dog boarding</string>
    <string name="title_3">Dog sitting</string>
    <string name="title_4">Dog day care</string>
    <string name="title_5">Cat boarding</string>
    <string name="title_6">Cat sitting</string>
    <string name="title_7">Drop in visits</string>

    <string name="text_1">As a human, it is important for your pet dogs also to have walking for at least an hour of time</string>
    <string name="text_2">The main objective of our dog boarding service is to offer a better place for your dogs like your home.</string>
    <string name="text_3">The dog sitter will completely know about the importance of having the regular activities of your dog and your pet can be peaceful</string>
    <string name="text_4">Doggy daycare service in which you can leave your dog with us while you are moving out and take back it at evening</string>
    <string name="text_5">Your cats will be active and safer under our cat boarding service. We have all the important facilities that are required for the cats</string>
    <string name="text_6">Our cat sitting service will give more relaxation to your cats. Surely, you will acquire a great service at a reasonable price</string>
    <string name="text_7">Drop-in visit service is one of the common pet care services in which your pets can get the essential attention within its own living environment</string>


    <string name="label_start_time">Start Time \n%1$s</string>
    <string name="label_end_time">End Time \n%1$s</string>

    <string name="booking_message">We have received your order,Please wait for Service provider confirmation</string>
    <string name="care_taker_details">Care Taker Details : </string>
    <string name="label_name">Name : %1$s %1$s</string>
    <string name="label_email">Email : %1$s</string>
    <string name="label_mobile">Mobile : %1$s</string>
    <string name="label_address">Address :</string>
    <string name="label_booking_address_">Booking Address :</string>
    <string name="label_done">Done</string>
</resources>
