<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp"
        android:gravity="center_vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dog_walking_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dog_walking"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/dog_boarding_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dog_boarding"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dog_sitting_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dog_sitting"
                android:layout_weight="1.15"/>

            <CheckBox
                android:id="@+id/dog_day_care_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dog_day_care"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cat_boarding_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cat_doarding"
                android:layout_weight="0.75"/>

            <CheckBox
                android:id="@+id/cat_sitting_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cat_sitting"
                android:layout_weight="1"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/drop_visits_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_drop_visits"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_charge_per_hour">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_charge_per_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text=""
                android:textColor="#383838"
                android:textSize="@dimen/sp14"
                app:backgroundTint="#00ce8f" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
</layout>