<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_first_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:text=""
                        android:digits="0123456789"
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>