<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/hint_address">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:text=""
                    android:textColor="#383838"
                    android:textSize="20sp"
                    app:backgroundTint="#00ce8f" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/hint_city">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:text=""
                    android:textColor="#383838"
                    android:textSize="20sp"
                    app:backgroundTint="#00ce8f" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/hint_state">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:text=""
                    android:textColor="#383838"
                    android:textSize="20sp"
                    app:backgroundTint="#00ce8f" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/hint_country">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:text=""
                    android:textColor="#383838"
                    android:textSize="20sp"
                    app:backgroundTint="#00ce8f" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/hint_zipcode">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:text=""
                    android:textColor="#383838"
                    android:textSize="20sp"
                    app:backgroundTint="#00ce8f" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
</layout>