<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10dp"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_account_number">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bank_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtBankName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_bank_branch">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtBranch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_ifsc_code">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtIFSCCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:text=""
                        android:textColor="#383838"
                        android:textSize="@dimen/sp14"
                        app:backgroundTint="#00ce8f" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


</RelativeLayout>
</layout>